# sre-cloud-incident-simulator

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  out.txt  pyproject.toml  requirements.txt
server/: app.py  environment.py
