[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-incident-simulator"
version = "0.1.13"
description = "Cloud Infrastructure Incident Simulator for AI Agents"
readme = "README.md"
# CRITICAL: Limits the resolution to versions that actually exist
requires-python = ">=3.11, <3.13"
authors = [{ name = "SRE AI" }]
dependencies = [
    "openenv-core>=0.2.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.35.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
include = [
    "models.py",
    "client.py",
    "inference.py",
    "openenv.yaml"
]

[tool.hatch.metadata]
allow-direct-references = true